[gd_scene load_steps=9 format=2]

[ext_resource path="res://Textures/level_complete_text.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Level_Complete_UI.gd" type="Script" id=2]
[ext_resource path="res://Textures/next_level_highlight_text.png" type="Texture" id=3]
[ext_resource path="res://Textures/next_level_text.png" type="Texture" id=4]
[ext_resource path="res://Textures/restart_text.png" type="Texture" id=5]
[ext_resource path="res://Textures/restart_highlight_text.png" type="Texture" id=6]
[ext_resource path="res://Textures/quit_text.png" type="Texture" id=7]
[ext_resource path="res://Textures/quit_highlight_text.png" type="Texture" id=8]

[node name="Level_Complete" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 1.0
margin_right = 1271.0
margin_bottom = 71.0
script = ExtResource( 2 )

[node name="Level_Complete_Text" type="Sprite" parent="."]
position = Vector2( 1161.63, 208.5 )
scale = Vector2( 4.11527, 5.32895 )
texture = ExtResource( 1 )

[node name="Time_Text" type="Label" parent="."]
margin_left = -262.0
margin_top = -174.0
margin_right = 46.0
margin_bottom = -160.0
rect_scale = Vector2( 9, 9 )
text = "You beat the level in: 0 minutes, and 0 seconds!"

[node name="Next_Level" type="TextureButton" parent="."]
margin_left = 619.0
margin_top = 462.0
margin_right = 1466.0
margin_bottom = 620.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 3 )
expand = true

[node name="Restart" type="TextureButton" parent="."]
margin_left = 741.0
margin_top = 668.0
margin_right = 1251.0
margin_bottom = 802.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Quit" type="TextureButton" parent="."]
margin_left = 844.0
margin_top = 871.0
margin_right = 1138.0
margin_bottom = 1002.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
